--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: ruby
+sudo: false
+cache: bundler
 rvm:
-  - 1.9.2
   - 1.9.3
   - 2.0.0
-  - rbx-19mode
-  - jruby-19mode
+  - 2.1
+  - 2.2
+  - 2.3.0
   - ruby-head
 matrix:
   allow_failures:
-    - rvm: rbx-19mode
-    - rvm: jruby-19mode
     - rvm: ruby-head
